# Rust

./: Cargo.toml  LICENSE  README.md
api_docs/: Rust.postman_collection.json
migrations/: 001_create_user_post.sql
src/: main.rs
src/config/: mod.rs
src/database/: mod.rs
src/handlers/: auth.rs  post.rs
src/middleware/: auth.rs
src/models/: mod.rs  post.rs  user.rs
